--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 volumes:
   pg_data:
   pg_data_2:
@@ -19,7 +17,7 @@ services:
       - "5433:5432"
 
   book-service:
-    build: ./book-service  # (book service)
+    build: ./book-service
     restart: always
     depends_on:
       - library_db
@@ -44,7 +42,7 @@ services:
       - "5434:5432"
 
   library-service:
-    build: ./library-service  # путь к Dockerfile вашего library-service
+    build: ./library-service
     restart: always
     depends_on:
       - library_db_2
