--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.application.name=book-service
-
-server.port=8080
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/library_db
+spring.application.name=auth-service
+server.port=8082
+spring.datasource.url=jdbc:postgresql://localhost:5435/user_db
 spring.datasource.username=vitya
 spring.datasource.password=22817
 
