--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -15,11 +15,13 @@ dependencies {
     // Spring
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.security:spring-security-test'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // Spring Security
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // OpenFeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.2'
@@ -33,14 +35,13 @@ dependencies {
     // SrpingDoc starter
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
-
-    // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-
-    // JWT implementation
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
-    // JWT jackson
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+//    // JWT
+//    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+//
+//    // JWT implementation
+//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+//    // JWT jackson
+//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
     // PostgreSQL
     implementation 'org.postgresql:postgresql:42.7.3'
