handle token exception

--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -7,11 +7,11 @@ plugins {
 group = 'org.example'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
+//java {
+//    toolchain {
+//        languageVersion = JavaLanguageVersion.of(21)
+//    }
+//}
 
 repositories {
     mavenCentral()
