--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     restart: always
     depends_on:
       - library_db
+      - eureka-registry
     ports:
       - "8080:8080"
     environment:
@@ -29,6 +30,7 @@ services:
       SPRING_DATASOURCE_USERNAME: vitya
       SPRING_DATASOURCE_PASSWORD: 22817
       SERVER_PORT: 8080
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-registry:8761/eureka/
 
   library_db_2:
     image: postgres
@@ -47,6 +49,7 @@ services:
     restart: always
     depends_on:
       - library_db_2
+      - eureka-registry
     ports:
       - "8081:8081"
     environment:
@@ -54,6 +57,8 @@ services:
       SPRING_DATASOURCE_USERNAME: vitya
       SPRING_DATASOURCE_PASSWORD: 22817
       SERVER_PORT: 8081
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-registry:8761/eureka/
+
 
   user_db:
     image: postgres
@@ -67,15 +72,38 @@ services:
     ports:
       - "5435:5432"
 
-#  auth-service:
-#    build: ./auth-service
-#    restart: always
-#    depends_on:
-#      - user_db
-#    ports:
-#      - "8082:8082"
-#    environment:
-#      SPRING_DATASOURCE_URL: jdbc:postgresql://user_db:5432/user_db
-#      SPRING_DATASOURCE_USERNAME: vitya
-#      SPRING_DATASOURCE_PASSWORD: 22817
-#      SERVER_PORT: 8082
+  auth-service:
+    build: ./auth-service
+    restart: always
+    depends_on:
+      - user_db
+      - eureka-registry
+    ports:
+      - "8082:8082"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://user_db:5432/user_db
+      SPRING_DATASOURCE_USERNAME: vitya
+      SPRING_DATASOURCE_PASSWORD: 22817
+      SERVER_PORT: 8082
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-registry:8761/eureka/
+
+  eureka-registry:
+    build: ./eureka-registry
+    restart: always
+    ports:
+      - "8761:8761"
+    environment:
+      SERVER_PORT: 8761
+
+
+  api-gateway:
+    build: ./api-gateway
+    restart: always
+    depends_on:
+      - eureka-registry
+    ports:
+      - "8000:8000"
+    environment:
+      SERVER_PORT: 8000
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-registry:8761/eureka/
+
