going to finish (2)

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -8,29 +8,48 @@ spring:
         - id: book-service
           uri: lb://BOOK-SERVICE
           predicates:
-            - Path=/books/**
+            - Path=/books/**, /book-service/v3/api-docs
           filters:
             - AuthenticationFilter
+#            - StripPrefix=1
 
         - id: library-service
           uri: lb://LIBRARY-SERVICE
           predicates:
-            - Path=/library/**
+            - Path=/library/**, /library-service/v3/api-docs
           filters:
             - AuthenticationFilter
+#            - StripPrefix=1
 
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
-            - Path=/auth/**
-
+            - Path=/auth/**, /auth-service/v3/api-docs
 
   application:
     name: API-GATEWAY
-
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    config-url: /v3/api-docs/swagger-config
+    urls:
+      - url: /v3/api-docs
+        name: API Gateway Service
+
+      - url: /book-service/v3/api-docs
+        name: Book Service
+
+      - url: /library-service/v3/api-docs
+        name: Library Service
+
+      - url: /auth-service/v3/api-docs
+        name: Auth Service
