--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -33,6 +33,18 @@ dependencies {
     // JWT jackson
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    // SrpingDoc starter
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.6.0'
+//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+
     // Other
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
