--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -32,10 +32,13 @@ dependencies {
 	// JWT jackson
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-
 	// Lombok
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok:1.18.34'
+	annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.34'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+
 	// PostgreSQL
 	runtimeOnly 'org.postgresql:postgresql'
 	// Test
