--- a/library-service/build.gradle
+++ b/library-service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
 	// SrpingDoc starter
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.6.0'
 
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
